--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src = "js/classes/CollisionBlock.js"></script>
 <script src = "js/classes/Sprite.js"></script>
 <script src = "js/classes/Player.js"></script>
+<script src = "js/classes/Coin.js"></script>
 <script src = "js/eventlisteners.js"></script>
 <script src = "js/game.js"></script>
 </html>
